Add night sky background image

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .container {
-  margin: 0 auto;
-  padding: 16px;
+color: white;
+ max-width: 100%;
+ max-height: 100%;
 }
 h1 {
   font-size: 3em;
@@ -11,4 +12,18 @@ form input {
 #outputbox {
   margin-top: 16px;
   margin-left: 4px;
+}
+#background{
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  
+}
+#content{
+  padding: 16px;
+}
+body{
+  background-color: rgb(4, 75, 99);
+  margin: 0;
 }
